# liblogicalaccess

./: .gitignore
plugins/pluginsreaderproviders/: CMakeLists.txt
plugins/pluginsreaderproviders/libnfc/: CMakeLists.txt  libnfcreaderprovider.cpp  libnfcreaderprovider.hpp  libnfcreaderunit.cpp  libnfcreaderunit.hpp  libnfcreaderunitconfiguration.cpp  libnfcreaderunitconfiguration.hpp  libraryentry.cpp
